--- a/01-helloworld/index.html
+++ b/01-helloworld/index.html
@@ -10,6 +10,6 @@
         <hello-world></hello-world>
         <script src="../bower_components/angular/angular.min.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/app.component.js"></script>
+        <script src="js/components/app.component.js"></script>
     </body>
 </html>
