angular start up

--- a/01-startup/index.html
+++ b/01-startup/index.html
@@ -9,17 +9,26 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-
+<body ng-controller="HelloCtrl">
 	<div class="container">
 		<div class="jumbotron center">
-			<hello-world></hello-world>
+			<h4>Expression</h4>
+			{{message}}
+		</div>
+		<div class="jumbotron center">
+			<h4>Two way data-binding (ng-model)</h4>
+			Your Name: <input type="text" ng-model="name">
+			<h3>{{name}}</h3>
+		</div>
+		<div class="jumbotron center">
+			<h4>Actions (ng-click) && (ng-repeat)</h4>
+			<input ng-model="user.firstName"></input>
+			<input type="submit" ng-click="login()" value="Login"></input>
+			<div ng-repeat="login in logins">{{ login }}</div>
 		</div>
 	</div>
-
 	<script src="../bower_components/angular/angular.min.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/components/app.component.js"></script>
 </body>
 
 </html>
